Succeed simple JDK 14 source features tests
Javac compatibility test still needs to be improved as the metric
doesn't examine all aspects of the record related elements yet.